cabal-version:      2.4
name:               frontend
version:            0.1.0

executable frontend
    main-is: Main.hs
    other-modules: NoGardenOnline
    
    build-depends: base
                 , array
                 , text
                 , protolude ^>= 0.3
                 , reflex-dom
    
    default-language: Haskell2010
