cabal-version:      2.4
name:               frontend
version:            0.1.0

executable frontend
    main-is: Main.hs
    other-modules: NoGardenOnline
                   Backports
    
    build-depends: base
                 , array
                 , containers
                 , protolude
                 , text
                 , transformers
                 , jsaddle
                 , ghcjs-dom
                 , reflex-dom
    
    default-language: Haskell2010
